# pathtracker-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  backlog.md
src/: character.rs  conditions.rs  duration.rs  gui.rs  lib.rs  main.rs  saver  saver.rs  settings.rs  tracker.rs
src/conditions/: condition_manager.rs
src/gui/: terminalgui.rs  window.rs  windowgui.rs
src/gui/terminalgui/: help.rs  parser.rs
src/gui/terminalgui/parser/: condition_parser.rs
src/gui/terminalgui/parser/condition_parser/: nonvalued_conditions.rs  valued_conditions.rs
src/gui/windowgui/: addwindow.rs  character.rs  characters.rs  condwindow.rs  dragvaluewindow.rs  errorwindow.rs  healthwindow.rs  renamewindow.rs  settingswindow.rs
tests/: conditionmanager_tests.rs  conditions_tests.rs  tracker_add_test.rs  tracker_change_test.rs  tracker_end_turn.rs  tracker_rm_test.rs  tracker_test.rs  tracker_undo_redo_tests.rs
