[package]
name = "pathtracker-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anymap2 = "0.13.0"
const_format = "0.2.32"
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = "0.30.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"

[lints.clippy]
unwrap_used = "warn"
unwrap_in_result = "warn"
option_filter_map = "warn"
nursery = "warn"
single_match_else = { level = "allow", priority = 1 }
pedantic = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
