[package]
name = "pathtracker-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anymap2 = "0.13.0"
const_format = "0.2.35"
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = "0.33.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[lints.clippy]
unwrap_used = "warn"
unwrap_in_result = "warn"
option_filter_map = "warn"
nursery = "warn"
single_match_else = { level = "allow", priority = 1 }
pedantic = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
